Fix About Heading

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <div class="aboutItem2HeadingText opacity-50 text-blue-600 text-5xl lg:text-8xl radial-gradient-text bg-clip-text text-transparent font-bold">
                 JOURNEY
               </div>
-              <div class="text-4xl lg:text-6xl text-blue-600 inset-x-1/3 top-5 absolute">
+              <div class="text-4xl lg:text-6xl text-blue-600 inset-x-1/3 top-1 lg:top-6  absolute">
                 ABOUT
               </div>
             </div>
