--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
           </div>
           <div class="relative group">
             <a href="#" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">About Us</a>
+            
           </div>
           <div class="relative group">
-            <a href="#" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Call Of Papers</a>
+            <a href="subPages/callpapers.html" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Call Of Papers</a>
             <div class="absolute left-0 hidden group-hover:block bg-white text-black w-40 rounded-lg shadow-lg">
               <a href="#" class="block px-4 py-2 hover:bg-blue-100">Track Of Conference</a>
               <a href="#" class="block px-4 py-2 hover:bg-blue-100">Submission Guidelines</a>
@@ -53,7 +54,7 @@
             </div>
           </div>
           <div class="relative group">
-            <a href="#" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Registration</a>
+            <a href="subPages/registration.html" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Registration</a>
           </div>
           <div class="relative group">
             <a href="#" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Committee</a>
@@ -65,7 +66,7 @@
             </div>
           </div>
           <div class="relative group">
-            <a href="#" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Speakers</a>
+            <a href="subPages/speakers.html" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Speakers</a>
           </div>
           <div class="relative group">
             <a href="#" class="nav-link text-blue-600 py-2 uppercase hover:text-blue-300 transition">Contact Us</a>
@@ -106,6 +107,9 @@
               <a href="#" class="block px-4 py-2 hover:bg-blue-100 text-[#181818]">Technical Program Committee</a>
               <a href="#" class="block px-4 py-2 hover:bg-blue-100 text-[#181818]">Student Committee</a>
             </div>
+          </div>
+          <div class="mb-2">
+            <a href="#" class="block px-4 py-2 uppercase text-[#181818] hover:text-blue-300">Registration</a>
           </div>
           <div class="mb-2">
             <a href="#" class="block px-4 py-2 uppercase text-[#181818] hover:text-blue-300">Speakers</a>
@@ -227,10 +231,10 @@
         <div class="aboutItem">
           <div class="aboutItem2Heading my-10 lg:my-20 block flex justify-center relative">
             <div class="flex justify-center">
-              <div class="aboutItem2HeadingText opacity-50 text-blue-600 text-5xl lg:text-8xl radial-gradient-text bg-clip-text text-transparent font-bold">
+              <div class="aboutItem2HeadingText opacity-30 text-blue-600 text-6xl lg:text-8xl radial-gradient-text bg-clip-text text-transparent font-bold">
                 JOURNEY
               </div>
-              <div class="text-4xl lg:text-6xl text-blue-600 inset-x-1/3 top-1 lg:top-6  absolute">
+              <div class="text-4xl lg:text-6xl text-blue-600 inset-x-1/3 top-3 lg:top-6 lg:left-72 absolute">
                 ABOUT
               </div>
             </div>
@@ -263,10 +267,10 @@
 <div class="Key_Dates_Section bg-[url('assets/AboutBg.png')]">
   <div class="aboutItem2Heading my-4 lg:my-16 block flex justify-center relative">
     <div class="flex justify-center">
-      <div class="aboutItem2HeadingText opacity-50 text-blue-600 text-5xl lg:text-8xl radial-gradient-text  bg-clip-text text-transparent font-bold">
+      <div class="aboutItem2HeadingText opacity-30 text-blue-600 text-6xl lg:text-8xl radial-gradient-text  bg-clip-text text-transparent font-bold">
         Key Dates
       </div>
-      <div class="text-4xl   lg:text-6xl text-blue-600 top-2 lg:top-6 absolute">
+      <div class="text-4xl   lg:text-6xl text-blue-600 top-3.5 lg:top-6 absolute">
         Key Dates
       </div>
     </div>
